# ares

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  ares-b2-snapshot.md  docker-compose.yml  fix-css-final.py  fix_css.py  readme.md  strip_staging.py  world_bible.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 05561cace318_add_items_table.py  0bc10a4b1267_add_conditions_table.py  2e8197e3fdef_add_stall_counter_to_campaign.py  3b80a1983338_add_level_and_hp_to_npcs.py  741c8686e3a3_add_chat_quality_columns_to_campaign.py  c4b16f7a8b2d_add_scene_art_cache.py  d3c344c0c1d4_initial_schema.py  d9b263c587e7_add_combat_state_to_campaign.py  f2df042d83bc_add_npc_portraits_table.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/project_ares_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_a1_dice.py  test_a2_inventory.py  test_a3_conditions.py  test_anthropic_provider.py  test_bootstrap_portraits.py  test_campaigns_api.py  test_canon_guard.py  test_clarify_api.py  test_condition_service.py  test_config.py  test_consequence_applier.py  test_context_builder.py  test_db_bootstrap.py  test_imports.py  test_integration_portraits.py  test_media_provider.py  test_npc_portrait_routes.py  test_npc_portrait_service.py  test_operator_api.py  test_provider_registry.py  test_scene_art.py  test_seed_runtime.py  test_turn_api_contract.py  test_turn_engine.py  test_turn_resolution_conditions.py  test_world_bible_parser.py
data/: README.md
(+176 files in other folders)
